[package]
authors = ["Oli Dacombe <olidacombe@gmail.com>"]
name = "count-promcula"
description = "Does nothing and exposes number of seconds alive metric"
documentation = "https://docs.rs/count-promcula/latest/count-promcula/"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/olidacombe/count-promcula"
rust-version = "1.72.0"

[dependencies]
axum = "0.7.1"
clap = { version = "4.4.10", features = ["derive"] }
color-eyre = "0.6.2"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]
